--- a/package.json
+++ b/package.json
@@ -22,11 +22,6 @@
   },
   "dependencies": {
     "@paperback/toolchain": "^0.8.0-alpha.47",
-    "@paperback/types": "^0.8.0-alpha.47",
-    "@types/crypto-js": "^4.1.1",
-    "cheerio": "^1.0.0-rc.12",
-    "crypto-js": "^4.1.1",
-    "entities": "^4.4.0",
-    "nodemon": "^2.0.22"
+    "@paperback/types": "^0.8.0-alpha.47"
   }
 }
